# sat-lopsidedness

./: LICENSE  README.md  first_steps.txt  pyproject.toml  requirements.txt  setup.py
sat_lopsidedness/: __init__.py
sat_lopsidedness/analysis/: __init__.py
sat_lopsidedness/data/: __init__.py
sat_lopsidedness/utils/: __init__.py
src/myproject/: __init__.py  galaxyAnalysis.ipynb  getGalaxyData.ipynb
src/myproject/utilities/: GalaxyGroup.py  ListGalaxyGroup.py  Merger Trees for Satellite Join Times.ipynb  Subhalo.py  __init__.py  iapi_TNG.py  parallelTools.py  plottingTools.py
tests/: __init__.py
